syntax = "proto3";
package plugins.jaeger;

option go_package = "github.com/kobsio/kobs/pkg/api/plugins/jaeger/proto";

// Jaeger is the service to get traces from a configured Jaeger instance.
service Jaeger {
  rpc GetServices(GetServicesRequest) returns (GetServicesResponse) {}
  rpc GetOperations(GetOperationsRequest) returns (GetOperationsResponse) {}
  rpc GetTraces(GetTracesRequest) returns (GetTracesResponse) {}
  rpc GetTrace(GetTraceRequest) returns (GetTraceResponse) {}
}

message GetServicesRequest {
  string name = 1;
}

message GetServicesResponse {
  repeated string services = 1;
}

message GetOperationsRequest {
  string name = 1;
  string service = 2;
}

message GetOperationsResponse {
  repeated Operation operations = 2;
}

message GetTracesRequest {
  string name = 1;
  string limit = 2;
  string maxDuration = 3;
  string minDuration = 4;
  string service = 5;
  string operation = 6;
  string tags = 7;
  int64 timeStart = 8;
  int64 timeEnd = 9;
}

message GetTracesResponse {
  string traces = 1;
}

message GetTraceRequest {
  string name = 1;
  string traceID = 2;
}

message GetTraceResponse {
  string traces = 1;
}

message Operation {
  string name = 1;
  string spanKind = 2;
}

message Spec {
  repeated Query queries = 1;
}

message Query {
  string name = 1;
  string service = 2;
  string operation = 3;
  string tags = 4;
}
